# wlsd

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: deploy.yaml  release.yaml  test.yaml
assets/: wlsd.tera.html
config/: dev.toml  prod.toml
scripts/: bootstrap.sh  deploy.sh
src/: app.rs  config.rs  db.rs  mail.rs  main.rs
src/app/: auth.rs  events.rs  home.rs  mod.rs  posts.rs
src/utils/: config.rs  db.rs  email.rs  mod.rs  tera.rs  tracing.rs  types.rs
templates/: event-create.tera.html  event-list.tera.html  event-update.tera.html  event.tera.html  home.tera.html  post-create.tera.html  post.tera.html  register.tera.html  wlsd.tera copy.html  wlsd.tera.html
