[package]
name = "wlsd"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["fs"] }
tera = "1"

tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "sync", "macros"] }
webrtc-util = "0.9"
webrtc-srtp = "0.13"
rtp = "0.11"
opus = "0.3"
# cpal = "0.15"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bytes = "1"
bytemuck = "1"
ringbuf = "0.4"
quanta = "0.12"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1
