[package]
name = "lsd"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", default-features = false, features = ["query", "form", "matched-path"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tera = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-rustls-tls", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net", "sync", "macros"] }
rustls = "0.23"
rustls-acme = { version = "0.12", features = ["axum"] }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
chrono = "0.4"

# Add a little optimization to debug builds
[profile.dev]
opt-level = 1
# And since they don't get recompiled often, fully optimize dependencies
[profile.dev.package."*"]
opt-level = 3
